	  disable pre-emption.  (2) Fix handling of touch ID and (2) add some logic to
	  prevent certain kinds of data overrun.
	* include/nx/nxtk.h and graphics/nx/nxtk/nxtk_internal.h:  Move setting
	  of configuration defaults from the internal header file to a place where
	  other logic can use the defaults.
	* graphics/nxtk/nxtk_events.c:  Fixed an important but in the logic that
	  translates the mouse/touchscreen position data for framed windows and toolbars.
	* drivers/input/stmpe11_tsc.c, tsc2007.c, and ads7843e.c:  Need to keep track of
	  when if positional data is valid.  When the touch is released, the X/Y position
	  of the release must be the same as the X/Y position of the last touch (se that
	  the release occurs in the same window as the last touch).
	* graphics/nxtk/nxtk_events.c:  Fix an error in mouse/touchscreen input logic:
	  Was autoraising the window AFTER processing the mouse press.  This raises havoc
	  if the result of processing the mouse click was to raise some other window!
	* graphics/nxtk/nxtk_events.c:  I had to disable the whole autoraise feature
	  for multi-user case because it does not work correctly.  In a scenario where (1) there
	  are multiple queued touchscreen events for the same window and (2) the result of the
	  first input was to switch windows, then the autoraise implementation will cause the
	  window to revert to the previous window.  Not good behavior.
	* sched/sched_mergepending.c:  Add task switching instrumentation.  There is a case
	  here where instrumentation was missing.  Contributed by Petri Tanskanen.
	CONFIG_STMPE11_THRESHX, CONFIG_STMPE11_THRESHX, and drivers/stmpe11_tsc.c:  Add some
	  threasholding controls to all slow down processing of touchscreen samples.
	  This is a problem with NX in multi-user mode:  touchscreen data gets sent
	  via a message and when the message queue gets full the sender blocks and
	  touch events are lost.  Basic data overrun.  The badly effects touchscreen
	  human factors.
  